--- a/config
+++ b/config
@@ -13,7 +13,7 @@ set $mod Mod4
 
 # Font for window titles. Will also be used by the bar unless a different font
 # is used in the bar {} block below.
-font pango:monospace 8
+font pango:monospace 10
 
 # This font is widely installed, provides lots of unicode glyphs, right-to-left
 # text rendering and scalability on retina/hidpi displays (thanks to pango).
@@ -160,23 +160,47 @@ bar {
 # After all standard things..
 # Johans mods
 #bindsym Control+Mod1+l exec i3lock
+#exec /home/toojsve/.config/i3/screenconfig.sh
+exec setxkbmap se
 bindsym Control+Mod1+l exec "~/.local/bin/fuzzy_lock.sh"
-exec xautolock -time 10 -locker '~/.local/bin/fuzzy_lock.sh' &
+exec xautolock -time 5 -locker '~/.local/bin/fuzzy_lock.sh' &
 
-set $monitor_primary DP-0
-set $monitor_secondary DP-1
-set $monitor_laptop DP-4
+set $monitor_laptop fake-0
+set $monitor_primary fake-1
+fake-outputs 1920x1080+0+0+2400x1920+1920+0
 
 workspace 1 output $monitor_primary
 workspace 2 output $monitor_primary
 workspace 3 output $monitor_primary
 workspace 4 output $monitor_primary
+workspace 5 output $monitor_primary
+workspace 6 output $monitor_primary
+workspace 7 output $monitor_primary
 
-workspace 5 output $monitor_secondary
-workspace 6 output $monitor_secondary
-workspace 7 output $monitor_secondary
+#workspace 5 output $monitor_secondary
+#workspace 6 output $monitor_secondary
+#workspace 7 output $monitor_secondary
 
-workspace 8 output $monitor_laptop
-workspace 9 output $monitor_laptop
+#workspace 8 output $monitor_laptop
+#workspace 9 output $monitor_laptop
 
+#fake-outputs 3840x1200+1920x1200
+#fake-outputs 1920x1080-3840x1080+0
 
+# Pulse Audio controls
+bindsym XF86AudioRaiseVolume exec --no-startup-id pactl set-sink-volume 0 +5% #increase sound volume
+bindsym XF86AudioLowerVolume exec --no-startup-id pactl set-sink-volume 0 -5% #decrease sound volume
+bindsym XF86AudioMute exec --no-startup-id pactl set-sink-mute 0 toggle # mute sound
+
+# Sreen brightness controls
+bindsym XF86MonBrightnessUp exec xbacklight -inc 20 # increase screen brightness
+bindsym XF86MonBrightnessDown exec xbacklight -dec 20 # decrease screen brightness
+
+# Touchpad controls
+bindsym XF86TouchpadToggle exec /some/path/toggletouchpad.sh # toggle touchpad
+
+# Media player controls
+bindsym XF86AudioPlay exec playerctl play
+bindsym XF86AudioPause exec playerctl pause
+bindsym XF86AudioNext exec playerctl next
+bindsym XF86AudioPrev exec playerctl previous
